# RemoteTask

./: .env  .gitignore  Cargo.toml  Justfile  README.md  test.rest
migration/: tasks.db
migration/src/: m20220101_000001_create_table.rs
public/: software.html
src/: main.rs  service.rs  task.rs
webpage/: Cargo.toml  Dioxus.toml
webpage/assets/: main.css
webpage/src/: main.rs  task.rs
