[package]
name = "remote-task"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8.1", features = ["macros"] }
sea-orm = { version = "1.1", default-features = false, features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-time",
    "with-json",
] }
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["fs", "set-header", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
